--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">My Name is Rafiq Stanton (Feek). I'm a 24 years old Intern who works at HopeWorks to help build professionalism, and build websites.  I graduated from West Philadelphia High School's CTE(Career Technical Education) program with certificates from Cisco, Hour of Code, and is apart of Advisory Committee for the CTE Program.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">I created and edited my own videos for my gaming channels. Ive Always had a drive to be in tech feild I remember I took two broken xbox360's and made a new system that no longer had problems only watching videos.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">My Name is Rafiq Stanton (Feek). I'm a 24 years old Intern who works at HopeWorks to help build professionalism and build websites. I graduated from West Philadelphia High School's CTE(Career Technical Education) program with certificates from Cisco and Hour of Code, and am a part of the Advisory Committee for the CTE Program.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">I created and edited my videos for my gaming channels. I've always had the drive to be in the tech field I remember I took two broken xbox360 and made a new system that no longer had problems only watching videos.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
